# CAE32

./: .gitignore  README.md
Archivos_STL/Banco_de_pruebas_AS5600/: Copia de Indicador_de_grados-Body.stl
Archivos_freecad/: Balero_Parametrico.FCStd  EJE_reatroalimentacion.FCStd  Eje parametrico.FCStd  Engrane_D15.FCStd  Engrane_Motor.FCStd  Motorreductor_encoder.FCStd  chumacera.FCStd  ensamble.FCStd  retroalimentacion.FCStd  soporte_balero.FCStd  soporte_balero_4EN.FCStd  transmision-InvoluteGear005.3mf  transmision.FCStd
Archivos_freecad/Case_para_pilas/: portapilas-Body.stl  (+1 more)
CAE32/: Proceso de adquisición de datos.md
Código_ESP_IDF/: test.txt
Código_ESP_IDF/components/: CMakeLists.txt
Código_ESP_IDF/components/CAE32/: CMakeLists.txt
Código_ESP_IDF/components/CAE32/include/: Pedales.h  Usb.h
Código_ESP_IDF/components/CAE32/src/: ConfADC.c  ConfMCPWM.c  ControladorI2c.c  ControladorMotor.c
Código_ESP_IDF/components/include/: Encoders.h  Marchas.h
Código_ESP_IDF/components/src/: Encoders.c  Marchas.c
InterfazGráfica/: README.md
InterfazGráfica/Interfaz GTK/: CMakeLists.txt  Makefile  UI1.glade  as  dispositivo.c  dispositivo.h  main.c
InterfazGráfica/Interfaz GTK/gladeFiles/: UI1.glade
InterfazGráfica/Interfaz GTK/include/: device.h  dispositivo.h  objectsGtk.h
InterfazGráfica/Interfaz GTK/sourceFilesOld/src/: deviceHID.c
InterfazGráfica/Interfaz GTK/src/: device.c  dispositivo.c  objectsGtk.c  signals.c
Proyecto_en_platformio/: CMakeLists.txt  platformio.ini
interfaz_grafica_conf_tests/: start
test_examples_freerthos/: CMakeLists.txt
(+405 files in other folders)
